--- a/pom.xml
+++ b/pom.xml
@@ -5,3 +5,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 </project>
+<plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
+</plugin>
